--- a/citadel/index.html
+++ b/citadel/index.html
@@ -6,7 +6,6 @@
     <title>Цитадель</title>
     <link rel="icon" href="./img/favicon.png"> 
     <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/main.js" defer></script>
 </head>
 <body>
     <header class="header">
@@ -201,5 +200,6 @@
     </div>
 
     <script src="./js/swiper-bundle.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
